# python-base-mcp-server

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .gitignore  .tool-versions  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/scripts/: install.sh
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: main.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/services/: weather.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/tools/: weather.py
