[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
authors = [
  { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp[cli]==1.6.0",
    "httpx==0.27.1"
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.3"
]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.project_slug }}"]

[tool.hatch.version]
path = "{{ cookiecutter.project_slug }}/version.py"

[project.scripts]
{{ cookiecutter.project_name }} = "{{ cookiecutter.project_slug }}.main:app"

[tool.pytest.ini_options]
pythonpath = "{{ cookiecutter.project_slug }}"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".+test_"
]
